# JWTifyPy

./: pyproject.toml
.github/workflows/: python-publish.yml  test.yml
tests/: test_jwt_key_config_init.py  test_jwtkeyconfig.py
