[tool.poetry]
name = "jwtifypy"
version = "0.1.0"
description = ""
authors = ["LordCode <9999269010dddd@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyjwt = "^2.10.1"
python-dotenv = { version = "^1.1.1", optional = true }
cryptography = { version = "^45.0.5", optional = true }

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[tool.poetry.extras]
env = ["python-dotenv"]
crypto = ["cryptography"]
full = ["python-dotenv", "cryptography"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
